<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AzurTv</string>
    <string name="action_settings">Paramètres</string>
    <string name="menu_search">Recherche</string>
    <string name="menu_refresh">Rafraichir</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_about">A propos</string>
    <string name="login">Connexion</string>
    <string name="cancel">Annuler</string>
    <string name="enter_identifiant">Identifiant</string>
    <string name="enter_mdp">Mot de passe</string>
    <string name="name">Nom et Prénom :</string>
    <string name="enter_name">Entrez votre nom</string>
    <string name="email">E-mail :</string>
    <string name="tel">Téléphone :</string>
    <string name="adress">Adresse :</string>
    <string name="zip">Code Postal :</string>
    <string name="city">Ville :</string>
    <string name="answer">Message :</string>
    <string name="entrer_email">Entrez votre e-mail</string>
    <string name="entrer_tel">Entrez votre numéro de téléphone</string>
    <string name="entrer_adress">Entrez votre adresse</string>
    <string name="entrer_zip">Entrez votre code postal</string>
    <string name="entrer_city">Entrez votre ville</string>
    <string name="entrer_answer">Entrez votre message</string>
    <string name="enter_name_error">Veuillez entrer un nom svp.</string>
    <string name="entrer_email_error">Veuillez entrer un e-mail svp.</string>
    <string name="enter_tel_error">Veuillez entrer un téléphone svp.</string>
    <string name="entrer_zip_error">Veuillez entrer un code postal svp.</string>
    <string name="entrer_adress_error">Veuillez entrer une adresse svp.</string>
    <string name="entrer_city_error">Veuillez entrer une ville svp.</string>
    <string name="entrer_answer_error">Veuillez entrer une réponse svp.</string>
    <string name="email_not_valid">Merci de rentrer un e-mail valide.</string>
    <string name="send">Envoyer</string>
    <string name="after_send_message">Merci d\'avoir rempli le formulaire.</string>
    <string name="loading_podcast">Chargement des podcasts</string>
    <string name="error_podcast">Impossible de récupérer les podcasts, veuillez réessayer plus tard.</string>
    <string name="error_programme">Impossible de récupérer les programmes, veuillez réessayer plus tard.</string>
    <string name="title_activity_podcast">Podcast</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_about">A propos</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_home">Menu</string>
    <string name="title_activity_detail_news">News</string>
    <string name="title_activity_detail_prog">Detail du Programme</string>
    <string name="loading">Chargement, Veuillez patienter &#8230;</string>
    <string name="title">Titre</string>
    <string name="date">Date</string>
    <string name="desc">Description</string>
    <string name="webTv_error">Désolé, la webTV n\'est pas accessible sur votre version d\'Android</string>
    <string name="webTv_error_network">Impossible de charger la webTV, veuillez réessayer plus tard.</string>
    <string name="default_time">0:00</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="error_network_connexion">Votre terminal n\'est actuellement pas connecté à Internet. Connectez vous à internet puis actualisez la page.</string>
    <string name="error_video">Une erreur est survenue pendant la lecture de la vidéo.</string>
    <string name="btn_podcast_video">Cliquez ici pour voir la vidéo</string>

    <string-array name="items">
        <item>News</item>
        <item>Podcast</item>
        <item>WebTv</item>
        <item>Programme</item>
        <item>Contact</item>
        <item>A propos</item>
        <item>Mon Compte</item>
    </string-array>

   

</resources>
