<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0"
        >
        
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/name"
	        android:layout_weight="0.5"
            />
        
        <EditText
            android:id="@+id/nameEditText"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:hint="@string/enter_name"
			android:layout_marginLeft="5dp"
            />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:weightSum="1.0"
        >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/email"
	        android:layout_weight="0.5"
            />
        
        <EditText
            android:id="@+id/emailEditText"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:hint="@string/entrer_email"
			android:inputType="textEmailAddress"
			android:layout_marginLeft="5dp"
            />
        
        
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:weightSum="1.0"
        >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/adress"
	        android:layout_weight="0.5"
            />
        
        <EditText
            android:id="@+id/adressEditText"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:hint="@string/entrer_adress"
			android:layout_marginLeft="5dp"
            />
        
        
        
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:weightSum="1.0"
        >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/zip"
	        android:layout_weight="0.5"
            />
        
        <EditText
            android:id="@+id/zipEditText"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:hint="@string/entrer_zip"
			android:layout_marginLeft="5dp"
            />
        
        
        
    </LinearLayout>
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:weightSum="1.0"
        >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/city"
	        android:layout_weight="0.5"
            />
        
        <EditText
            android:id="@+id/cityEditText"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:hint="@string/entrer_city"
			android:layout_marginLeft="5dp"
            />
        
        
        
    </LinearLayout>
    
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:weightSum="1.0"
        >
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/answer"
	        android:layout_weight="0.5"
            />
        
        <EditText
            android:id="@+id/answerEditText"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:hint="@string/entrer_answer"
			android:layout_marginLeft="5dp"
            />
        
        
        
    </LinearLayout>
    
    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginTop="10dp"
        />

</LinearLayout>
